@@ -1,3 +1,8 @@
+2013-10-30  Joern Rennecke  <joern.rennecke@embecosm.com>
+
+	PR other/58545
+	* gcc.target/avr/pr58545.c: New test.
+
 2013-09-06  Joern Rennecke  <joern.rennecke@embecosm.com>
 
 	* gcc.dg/ipa/ipa-pta-14.c (scan-ipa-dump) [keeps_null_pointer_checks]:
